@@ -1,3 +1,4 @@
+220830 debug sokoban
 220822 add sokoban
 220822 add new environments
 220805 add render video
